Added our story page and fixed home page = index

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <nav id="navbar">
             <div class="container" id="navshadow">
                 <div class="d1"><img id="logo" src="logo-white.png" alt="Viktor Profile Photo"></div>
-                <div class="d2"><a class="navlinks" href="Website%20Main%20Page.html"> Home</a></div>
+                <div class="d2"><a class="navlinks" href="index.html"> Home</a></div>
                 <div class="d3"><a class="navlinks" href="Selection%20Page.html"> Selection</a></div>
-                <div class="d4"><a class="navlinks" href="Our%20Story%20Page.html"> Our Story</a></div>
+                <div class="d4"><a class="navlinks" href="Our-Story-Page.html"> Our Story</a></div>
                 <div class="d5"><a class="navlinks" href="https://www.instagram.com/beeswaxwraps_julia_and_victor/" target="_blank"> Instagram</a></div>
             </div>
         </nav>
